--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
 						</button>
-						<h4 class="brand visible-tablet">Laboratorio Intel y Cómputo de Alto Desempeño</h4>
+						<h4 class="brand visible-tablet" id="tablet-brand">Laboratorio Intel y Cómputo de Alto Desempeño</h4>
 						<div class="nav-collapse collapse">
 							<a class="brand visible-desktop" href="#">Laboratorio Intel y Cómputo de Alto Desempeño</a>
 							<!--<a class="visible-desktop" href=http://www.ingenieria.unam.mx target="_blank">Facultad de Ingeniería</a>
